--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -30,7 +30,7 @@
       </div>
       <div>
         <%= f.label :概要欄 %>
-          <%= f.text_field :body, :size => 300 %>
+          <%= f.text_area :body, :size => 300 %>
       </div>
 
       <%= f.submit "投稿" %>
