--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,7 +57,7 @@
               </li>
               <li class="Menu-Group-Item">
                 <a class="Menu-Group-Item-Link" href="/movies">
-                  <span>MV</span>
+                  <span>映像</span>
                 </a>
               </li>
               <hr class="Menu-Group-Separator">
@@ -83,7 +83,7 @@
               </li>
               <li class="Menu-Group-Item">
                 <a class="Menu-Group-Item-Link" href="/movies/new">
-                  <span>MV</span>
+                  <span>映像</span>
                 </a>
               </li>
               <hr class="Menu-Group-Separator">
@@ -145,7 +145,7 @@
             </li>
           <% else %>
             <li>
-              <%= link_to("Wibluとは", "/") %>
+              <%= link_to("Wibluとは", "https://wiblu-blog.net/wiblu-toha") %>
             </li>
             <li>
               <%= link_to("新規登録", "/signup") %>
