--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,7 +29,7 @@
       <li class="active"><a href="#tab1">歌詞</a></li>
       <li><a href="#tab2">画像</a></li>
       <li><a href="#tab3">音楽</a></li>
-      <li><a href="#tab4">動画</a></li>
+      <li><a href="#tab4">映像</a></li>
     </ul>
     
     <div class="tab-content" id="tab1">
