--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -15,7 +15,7 @@
 
           <div class="form-group">
             <%= f.label :body, "タイトル" %>
-            <%= f.text_area :body, rows: 2, class: "form-control" %>
+            <%= f.text_field :body, rows: 2, class: "form-control" %>
           </div>
         </div>
 
