--- a/app/views/images/edit.html.erb
+++ b/app/views/images/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="main posts-new">
   <div class="container">
-    <h1 class="form-heading">編集する</h1>
+    <h1 class="form-heading">編集</h1>
   </div>
 
   <%= form_with(model: @image, url: "/images/#{@image.id}", method: :put) do |form| %>
