--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,23 +1,23 @@
 <div class="main posts-new">
-  <div class="post-container">
+  <div class="container">
     <h1 class="form-heading">編集</h1>
-    <%= form_tag("/posts/#{@post.id}/update") do %>
     <div class="form">
-      <div class="form-body">
-      <% @post.errors.full_messages.each do |message| %>
-        <div class="form-error">
-          <%= message %>
+      <%= form_tag("/posts/#{@post.id}/update") do %>
+        <div class="form-body">
+          <% @post.errors.full_messages.each do |message| %>
+             <div class="form-error">
+              <%= message %>
+            </div>
+          <% end %>
+          <p>タイトル</p>
+          <input type="text" name="title" value="<%= @post.title %>">
+          <p>歌詞</p>
+          <textarea name="content"><%= @post.content %></textarea>
+          <p>概要欄</p>
+          <textarea name="body"><%= @post.body %></textarea>
+          <input type="submit" value="保存">
         </div>
       <% end %>
-        <p>タイトル</p>
-        <textarea name="title"><%= @post.title %></textarea>
-        <p>歌詞</p>
-        <textarea name="content"><%= @post.content %></textarea>
-        <p>概要欄</p>
-        <textarea name="body"><%= @post.body %></textarea>
-        <input type="submit" value="保存">
-        <% end %>
-      </div>
     </div>
   </div>
 </div>
