--- a/app/assets/stylesheets/posts.css
+++ b/app/assets/stylesheets/posts.css
@@ -14,21 +14,21 @@
 
   .post-tilte {
     font-size: 14px;
-    margin-bottom: 10px;
+    margin: 20px 0 0 10px;
   }
   
   .post-left img {
-  width: 60px;
-  height: 60px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   object-fit: cover;
   box-shadow: 0 2px 6px #c1ced7;
   }
   
   .post-user-name {
-  margin: 13px 0 30px 20px;
+  margin: 5px 0 40px 5px;
   font-weight: 600;
-  font-size: 20px;
+  font-size: 18px;
   display: inline-block;
   }
   
