--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -1,10 +1,10 @@
 <div class="main posts-show">
   <div class="container">
     <div class="images-show-item">
-      <div class="image-left">
+      <div class="post-left">
         <%= image_tag("/user_images/#{h(@user.image_name)}") %>
       </div>
-      <div class="image-right">
+      <div class="post-right">
         <div class="post-user-name">
           <%= link_to(@user.name, user_path(@user)) %>
         </div>
@@ -13,13 +13,13 @@
         <%= image_tag(@image.ctype.url, size: "400x266", alt: "Image") %>
         <div class="image-body">
           <p>タイトル</p>
-          <div><%= h(@image.image_name) %></div>
+          <div><%= @image.image_name %></div>
           <p>概要欄</p>
-          <div><%= simple_format(h(@image.body)) %></div>
+          <div><%= @image.body %></div>
         </div>
       </div>
-      <div class="image-time">
-        <%= l @image.created_at, format: :long %>
+      <div class="post-time">
+        <%= @image.created_at.strftime("%Y年%m月%d日 %H:%M:%S") %>
       </div>
       <% if Like.exists?(user_id: @current_user.id, image_id: @image.id) %>
         <%= link_to("/likes/#{h(@image.id)}/image_destroy", method: :post, class: "like-button liked", data: { resource_id: @image.id, resource_type: "image" }) do %>
@@ -34,9 +34,9 @@
       <% if @image.user_id == @current_user.id %>
         <div class="post-menus">
           <%= link_to("編集", "/images/#{@image.id}/edit") %>
-          <%= link_to("削除", "/images/#{@image.id}/destroy") %>
         </div>
       <% end %>
+    </div>
     </div>
   </div>
 </div>
