--- a/app/views/images/edit.html.erb
+++ b/app/views/images/edit.html.erb
@@ -20,4 +20,7 @@
       </div>
     <% end %>
   </div>
+  <div class="destroy">
+    <%= link_to("削除", "/images/#{@image.id}/destroy", "data-confirm" => "本当に削除しますか？") %>
+  </div>
 </div>
