--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,11 +1,11 @@
 <div class="main posts-index">
-  <div class="movie-container">
+  <div class="post-container">
     <% @movies.each do |movie| %>
-      <div class="movies-index-item">
+      <div class="posts-index-item">
         <div class="post-left">
           <img src="<%= "/user_images/#{movie.user.image_name}" %>">
         </div>
-        <div class="movie-right">
+        <div class="post-right">
           <div class="post-user-name">
             <%= link_to(movie.user.name, "/users/#{movie.user.id}") %>
           </div>
@@ -15,7 +15,7 @@
             <%= link_to( movie.body, "/movies/#{movie.id}" ) %>
           </div>
 
-        <div class="movie-like">
+        <div class="post-like">
           <% if Like.find_by(user_id: @current_user.id, movie_id: movie.id) %>
             <%= link_to("/likes/#{movie.id}/movie_destroy", method: :post, class: "like-button liked", data: { resource_id: movie.id, resource_type: "movie" }) do %>
               <span class="fa fa-heart liked-btn"></span>
