--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -29,4 +29,7 @@
       <% end %>
     </div>
   </div>
+  <div class="destroy">
+    <%= link_to("削除", "/movies/#{@movie.id}/destroy", "data-confirm" => "本当に削除しますか？") %>
+  </div>
 </div>
