--- a/app/views/musics/show.html.erb
+++ b/app/views/musics/show.html.erb
@@ -1,24 +1,21 @@
 <div class="main posts-show">
   <div class="container">
-    <div class="posts-show-item">
-      <div class="post-user-name">
+    <div class="images-show-item">
+      <div class="post-left">
         <img src="<%= "/user_images/#{@user.image_name}" %>">
+      </div>
+      <div class="post-user-name">
         <%= link_to(@user.name, "/users/#{@user.id}") %>
       </div>
       <div class="image-contents">
         <audio src="<%= @music.file %>" controls="">
           <a href="<%= @music.file %>">ダウンロード</a>
         </audio>
-
         <div class="image-body">
           <p>タイトル</p>
-          <div>
-            <%= @music.body %>
-          </div>
+          <div><%= @music.body %></div>
           <p>概要欄</p>
-          <div>
-            <%= @music.content %>
-          </div>
+          <div><%= @music.content %></div>
         </div>
       </div>
       <div class="post-time">
@@ -39,7 +36,6 @@
       <% if @music.user_id == @current_user.id %>
         <div class="post-menus">
           <%= link_to("編集", "/musics/#{@music.id}/edit") %>
-          <%= link_to("削除","/musics/#{@music.id}/destroy") %>
         </div>
       <% end %>
     </div>
