--- a/app/views/musics/index.html.erb
+++ b/app/views/musics/index.html.erb
@@ -1,22 +1,19 @@
 <div class="main posts-index">
-  <div class="music-container">
+  <div class="container">
       <div id="musics">
         <% @musics.each do |music| %>
-          <div class="musics-index-item">
-            <div class="music-left">
+          <div class="posts-index-item">
+            <div class="post-left">
               <img src="<%= "/user_images/#{music.user.image_name}" %>">
-              <div class="music-user-name">
+            </div>
+            <div class="post-right">
+              <div class="post-user-name">
                 <%= link_to(music.user.name, "/users/#{music.user.id}") %>
               </div>
             </div>
-
             <div class="music-content">
               <div class="music-item">
-                <audio src="<%= "#{music.file}" %>" controls="">
-                  <a src="<%= "#{music.file}" %>">ダウンロード</a>
-                </audio>
-                <%= link_to(music.body, "/musics/#{music.id}" ) %>
-
+              <div class="music-title"><%= link_to(music.body, "/musics/#{music.id}" ) %></div>
                 <div class="music-like">
                   <% if Like.find_by(user_id: @current_user.id, music_id: music.id) %>
                     <%= link_to("/likes/#{music.id}/music_destroy", method: :post, class: "like-button liked", data: { resource_id: music.id, resource_type: "music" }) do %>
