--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -119,12 +119,11 @@
 }
 
 .destroy {
+  font-weight: bold;
   margin-top: 60px;
   padding-top: 20px;
   padding-bottom: 20px;
   border: 2px solid #000;
-  color: crimson;
-  border-radius: 0;
   background: #fff;
   display: flex;
   justify-content: center;
@@ -133,5 +132,5 @@
 
 .destroy:hover {
   color: #fff;
-  background: #ff006f;
+  background: #f08080;
 }
