--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -1,12 +1,9 @@
 /* users/index ================================ */
 .users-index-item {
-  position: relative;
-  padding: 15px 30px;
+  padding: 3%;
   background-color: white;
   overflow: hidden;
   box-shadow: 0 2px 6px #c1ced7;
-  display: table;
-  width: 100%;
 }
 
 .user-left img {
