--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -36,5 +36,23 @@
         </div>
       <% end %>
     </div>
+    <% if @post.user_id != @current_user.id %>
+      <div class="destroy">
+        <% if Apply.find_by(request_id: @post.user_id, post_id: @post.id) %>
+          <%= link_to("利用可能", "/applies/#{@user.id}/index") %>
+        <% elsif Apply.find_by(post_id: @post.id) %>
+          <%= "申請中" %>
+        <% else %>
+          <% if flash[:success] == "申請が送信されました" %>
+            <%= "申請中" %>
+          <% else %>
+            <%= form_for @apply, url: "/posts/#{@post.id}/applies", method: :post do |f| %>
+              <%= f.hidden_field :post_id, value: @post.id %>
+              <%= f.submit "申請する" %>
+            <% end %>
+          <% end %>
+        <% end %>
+      </div>
+    <% end %>
   </div>
 </div>
