--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -93,6 +93,11 @@
                 </a>
               </li>
               <li class="Menu-Group-Item">
+              <a class="Menu-Group-Item-Link" href="/applies/#{@current_user.id}/index">
+                <span>ダウンロード承認</span>
+              </a>
+              </li>
+              <li class="Menu-Group-Item">
                 <a class="Menu-Group-Item-Link" href="/users/index">
                   <span>ユーザー一覧</span>
                 </a>
