--- a/app/views/musics/show.html.erb
+++ b/app/views/musics/show.html.erb
@@ -23,11 +23,11 @@
       </div>
 
       <% if Like.find_by(user_id: @current_user.id, music_id: @music.id) %>
-        <%= link_to(music_destroy_like_path(@music.id), method: :post, class: "like-button liked", data: { resource_id: @music.id, resource_type: "music" }) do %>
+        <%= link_to("/likes/#{@music.id}/music_destroy", method: :post, class: "like-button liked", data: { resource_id: @music.id, resource_type: "music" }) do %>
           <span class="fa fa-heart liked-btn"></span>
         <% end %>
       <% else %>
-        <%= link_to(music_create_like_path(@music.id), method: :post, class: "like-button unliked", data: { resource_id: @music.id, resource_type: "music" }) do %>
+        <%= link_to("/likes/#{@music.id}/music_create", method: :post, class: "like-button unliked", data: { resource_id: @music.id, resource_type: "music" }) do %>
           <span class="fa fa-heart unliked-btn"></span>
         <% end %>
       <% end %>
