--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -22,6 +22,7 @@
         <% end %>
       </div>
     </div>
+    <%= link_to ">>パスワードの変更はこちら", new_password_reset_path %>
     <a href="#" onclick="confirmAndDelete(<%= @user.id %>, 'user')">
       <div class="destroy">
         <%= "アカウント削除" %>
