--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -14,6 +14,7 @@
         <input name="email" value="<%= @email %>">
         <p>パスワード</p>
         <input type="password" name="password" value="<%= @password %>">
+        <%= link_to ">>パスワードを忘れた方はこちら", new_password_reset_path %>
         <input type="submit" value="ログイン">
         <% end %>
       </div>
