--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -4,11 +4,11 @@
       <div class="form users-form">
         <div class="form-body">
           <%= form_with model: @user, url: password_reset_path(@token), local: true do |f| %>
-            <%= f.label :email %>
+            <%= f.label :email, "メールアドレス" %>
               <%= @user.email %>
-            <%= f.label :password %>
+            <%= f.label :password, "パスワード" %>
               <%= f.password_field :password, class: 'form-control' %>
-            <%= f.label :password_confirmation %>
+            <%= f.label :password_confirmation, "新しいパスワード" %>
               <%= f.password_field :password_confirmation, class: 'form-control' %>
             <%= f.submit '更新する', class: 'btn btn-primary' %>
           <% end %>
