--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -11,7 +11,7 @@
           </div>
         </div>
           <div class="movie-contents">
-            <%= video_tag(movie.video.to_s, loop: true, autoplay: true, muted: true, controls: true) %>
+            <%= video_tag(movie.video.to_s, loop: true, autoplay: true, muted: true) %>
             <%= link_to( movie.body, "/movies/#{movie.id}" ) %>
           </div>
 
