--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -10,7 +10,9 @@
         </div>
       </div>
       <div class="movie-contents">
-        <%= video_tag(@movie.video.to_s, loop: true, autoplay: true, muted: true, controls: true) %>
+        <video loop autoplay muted controls controlslist="nodownload">
+          <source src="<%= @movie.video.to_s %>" type="video/mp4">
+        </video>
         <div class="image-body">
           <p>タイトル</p>
           <div><%= @movie.body %></div>
