--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,6 +57,11 @@
                   <span>映像</span>
                 </a>
               </li>
+              <li class="Menu-Group-Item">
+              <a class="Menu-Group-Item-Link" href="/videos">
+                <span>ミュージックビデオ</span>
+              </a>
+              </li>
               <hr class="Menu-Group-Separator">
               <li class="Menu-Group-Item">
                 <a class="Menu-Group-Item-Link" href="#">
@@ -82,6 +87,11 @@
                 <a class="Menu-Group-Item-Link" href="/movies/new">
                   <span>映像</span>
                 </a>
+              </li>
+              <li class="Menu-Group-Item">
+              <a class="Menu-Group-Item-Link" href="/videos/new">
+                <span>ミュージックビデオ</span>
+              </a>
               </li>
               <hr class="Menu-Group-Separator">
               <li class="Menu-Group-Item">
