--- a/app/views/musics/new.html.erb
+++ b/app/views/musics/new.html.erb
@@ -29,8 +29,9 @@
 
         <%= f.label :概要欄 %>
           <%= f.text_area :content, :size => 300 %>
-
-        <%= f.submit "投稿" %>
+        <div class="form-group">
+          <%= f.submit "投稿" %>
+        </div>
       <% end %>
     </div>
   </div>
