--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -32,7 +32,9 @@
         <%= f.label :概要欄 %>
           <%= f.text_area :content, :size => 300 %>
       </div>
-      <%= f.submit "投稿" %>
+      <div class="form-group">
+        <%= f.submit "投稿" %>
+      </div>
     <% end %>
   </div>
   </div>
