--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,52 +1,64 @@
 /* reset ================================ */
 * {
-    box-sizing: border-box;
-  }
-  
-  html {
-    font: 100%/1.5 'Avenir Next', 'Hiragino Sans', sans-serif;
-    line-height: 1.7;
-    letter-spacing: 1px;
-  }
-  
-  ul, li {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  a {
-    text-decoration: none;
-    color: #2d3133;
-    font-size: 14px;
-  }
-  
-  h1, h2, h3, h4, h5, h6, p {
-    margin: 0;
-  }
+  box-sizing: border-box;
+}
 
-  input {
-    background-color: transparent;
-    outline-width: 0;
-  }
-  
-  form input[type="submit"] {
-    border: none;
-    cursor: pointer;
-  }
+html {
+  font: 100%/1.5 'Avenir Next', 'Hiragino Sans', sans-serif;
+  line-height: 1.7;
+  letter-spacing: 1px;
+}
 
-  /* 共通レイアウト ================================ */
-  body {
-    color: #2d3133;
-    margin: 0;
-    min-height: 1vh;
-  }
+ul, li {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
 
-  @media screen and (min-width: 768px) {
+a {
+  text-decoration: none;
+  color: #2d3133;
+  font-size: 14px;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+  margin: 0;
+}
+
+input {
+  background-color: transparent;
+  outline-width: 0;
+}
+
+form input[type="submit"] {
+  border: none;
+  cursor: pointer;
+}
+
+/* 共通レイアウト ================================ */
+body {
+  color: #2d3133;
+  margin: 0;
+  min-height: 1vh;
+}
+
+@media screen and (min-width: 768px) {
+.main {
+  position: absolute;
+  top: 64px;
+  width: 85%;
+  right: 0;
+  height: auto;
+  min-height: 100%;
+  background-color: #f5f5f5;
+}
+}
+
+@media screen and (max-width: 767px) {
   .main {
     position: absolute;
     top: 64px;
-    width: 85%;
+    width: 100%;
     right: 0;
     height: auto;
     min-height: 100%;
@@ -54,375 +66,367 @@
   }
 }
 
-  @media screen and (max-width: 767px) {
-    .main {
-      position: absolute;
-      top: 64px;
-      width: 100%;
-      right: 0;
-      height: auto;
-      min-height: 100%;
-      background-color: #f5f5f5;
-    }
-  }
+.container {
+  max-width: 600px;
+  margin: 60px auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  clear: both;
+}
 
-  .container {
-    max-width: 600px;
-    margin: 60px auto;
-    padding-left: 15px;
-    padding-right: 15px;
-    clear: both;
-  }
+.search {
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding-top: 23px;
+  padding-right: 30px;
+  font-size: 22px; /* アイコンのサイズを変更する値 */
+}
 
-  .search {
-      position: relative;
-      display: flex;
-      align-items: center;
-      padding-top: 23px;
-      padding-right: 30px;
-      font-size: 22px; /* アイコンのサイズを変更する値 */
-    }
+.search-icon {
+  color: #555;
+  cursor: pointer;
+}
 
-    .search-icon {
-      color: #555;
-      cursor: pointer;
-    }
-  
-    .search-form {
-      position: absolute;
-      top: 15px;
-      right: -200px;
-      width: 300px;
-      background-color: #fff;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-      border: 1px solid #dfe1e5;
-      border-radius: 24px;
-      transition: right 0.3s ease;
-      opacity: 0;
-      pointer-events: none;
-      z-index: 1;
-    }
-  
-    .search.active .search-form {
-      right: 0;
-      opacity: 1;
-      pointer-events: auto;
-    }
-  
-    .search-form::before {
-      width: 100%;
-      height: 15px;
-      background-position: center;
-      background-repeat: no-repeat;
-      content: '';
-    }
-  
-    .search-form input {
-      width: 100%;
-      height: 40px;
-      padding: 5px 10px;
-      border: none;
-      box-sizing: border-box;
-      outline: none;
-    }
-  
-    .fa-search {
-      color: #555;
-      cursor: pointer;
-    }
+.search-form {
+  position: absolute;
+  top: 15px;
+  right: 0;
+  width: 300px;
+  background-color: #fff;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  border: 1px solid #dfe1e5;
+  border-radius: 24px;
+  transition: right 0.3s ease;
+  opacity: 0;
+  pointer-events: none;
+  z-index: 1;
+}
+
+.search.active .search-form {
+  right: 0;
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.search-form::before {
+  width: 100%;
+  height: 15px;
+  background-position: center;
+  background-repeat: no-repeat;
+  content: '';
+}
+
+.search-form input {
+  width: 100%;
+  height: 40px;
+  padding: 5px 10px;
+  border: none;
+  box-sizing: border-box;
+  outline: none;
+}
+
+.fa-search {
+  color: #555;
+  cursor: pointer;
+}
 
 /* ヘッダー ================================ */
 header {
-  height: 64px;
-  position: fixed!important;
-  z-index: 1;
-  width: 100%;
-  background: transparent;
-  background-color: white;
-  box-shadow: 0px 2px 5px #888888;
+height: 64px;
+position: fixed!important;
+z-index: 1;
+width: 100%;
+background: transparent;
+background-color: white;
+box-shadow: 0px 2px 5px #888888;
 }
 
 /* ヘッダーロゴのスタイル */
 .header-logo {
-  float: left;
-  padding-top: 20px;
-  padding-left: 30px;
-  color: black;
-  font-size: 22px;
-  line-height: 35px;
+float: left;
+padding-top: 20px;
+padding-left: 30px;
+color: black;
+font-size: 22px;
+line-height: 35px;
 }
 
 .header-logo a {
-  color: black;
-  font-size: 15px;
-  padding: 5px;
-  padding-left: 20px;
-  }
+color: black;
+font-size: 15px;
+padding: 5px;
+padding-left: 20px;
+}
 
 /* メニューのスタイル */
 .header-menus {
-  float: right;
-  padding-right: 20px;
+float: right;
+padding-right: 20px;
 }
 
 .header-menus li {
-  float: left;
-  line-height: 64px;
-  font-size: 13px;
-  color: black;
-  padding-left: 10px;
+float: left;
+line-height: 64px;
+font-size: 13px;
+color: black;
+padding-left: 15px;
 }
 
 .header-menus a{
-  float: left;
-  font-size: 13px;
-  color: black
+float: left;
+font-size: 13px;
+color: black
 }
 
 .header-icon img {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  object-fit: cover;
-  box-shadow: 0 2px 6px #c1ced7;
-  margin-top: 13px;
-  margin-right: 10px;
+width: 40px;
+height: 40px;
+border-radius: 50%;
+object-fit: cover;
+box-shadow: 0 2px 6px #c1ced7;
+margin-top: 13px;
+margin-right: 10px;
 }
+
+/* メニューの共通スタイル */
+
 
 /* パソコンの画面幅 */
 @media screen and (min-width: 768px) {
-  .checkbox {
-    display: none;
-  }
+.checkbox {
+  display: none;
+}
 
-  .Menu {
-    position: absolute;
-    margin-top: 9px;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    width: 220%; /* サイドメニューの幅 */
-    max-height: calc(100vh - 100px); /* メニューの最大の高さ（ヘッダーの高さを考慮） */
-    background-color: white; /* サイドメニューの背景色 */
-    /* その他のスタイルを設定 */
-  }
-  
-  .header-logo {
-    position: relative;
-  }
+.Menu {
+  position: absolute;
+  margin-top: 87px;
+  left: 10px;
+  display: flex;
+  flex-direction: column;
+  width: 190px; /* サイドメニューの幅 */
+  max-height: calc(100vh - 100px); /* メニューの最大の高さ（ヘッダーの高さを考慮） */
+  background-color: white; /* サイドメニューの背景色 */
+  /* その他のスタイルを設定 */
+}
 
-  .Menu-CloseBtn {
-    display: none;
-  }
+.header-logo {
+  position: relative;
+}
 
-  .Menu-Group {
-    display: block;
-  }
+.Menu-CloseBtn {
+  display: none;
+}
 
-  .logo {
-    display: block;
-  }
+.Menu-Group {
+  display: block;
+}
 
-  .Menu-HamburgerBtn {
-    display: none;
-  }
+.logo {
+  display: block;
+}
 
-  .CloseButton {
-    display: none;
-  }
-  
-  .CloseButton-Icon {
-    display: none;
-  }
+.Menu-HamburgerBtn {
+  display: none;
+}
+
+.CloseButton {
+  display: none;
+}
+
+.CloseButton-Icon {
+  display: none;
+}
 }
 
 /* スマートフォンの画面幅 */
 @media screen and (max-width: 767px) {
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
-  }
-
-  .logo {
-    padding-left: 25px;
-  }
-  
-  .span-container,
-  .checkbox {
-    width: 22px;
-    height: 22px;
-    position: absolute;
-    top: 45%;
-    transform: translateY(-20%);
-    color: #000;
-  }
-  
-  .checkbox {
-    display: none;
-  }
-  
-  .span-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-end;
-    width: 22px;
-    height: 22px;
-    cursor: pointer;
-    left: 0;
-    margin-left: 20px;
-  }
-  
-  .span-container span {
-    width: 100%;
-    height: 1.5px;
-    background: black;
-    transition: all 250ms ease-out;
-    transform-origin: 0 0;
-  }
-
-  .checkbox:checked ~ .Menu {
-    display: block;
-    left: 0;
-  }
-  
-  .checkbox:checked ~ .span-container span:nth-last-child(1) {
-    transform: rotate(-45deg) translate(-1px, 0px);
-  }
-  
-  .checkbox:checked ~ .span-container span:nth-last-child(2) {
-    transform: rotate(0deg) scale(0.2, 0.2);
-    opacity: 0;
-  }
-  
-  .checkbox:checked ~ .span-container span:nth-last-child(3) {
-    transform: rotate(45deg) translate(0px, -1px);
-  }
-  
-  .Menu-Group {
-    padding: 30px;
-    margin: 0;
-  }
-  
-  .Menu-Group-Item {
-    margin-bottom: 0.3rem;
-  }
-  
-  .Menu-Group-Item-Link {
-    text-decoration: none;
-    color: white;
-    font-size: clamp(1.4rem, 2.4vw, 2.2rem);
-  }
-  
-  .Menu-Group-Item-Link:hover {
-    color: salmon;
-  }
-  
-  .Menu-Group-Separator {
-    margin: 1rem 0;
-    border: none;
-    border-top: 1px solid #dddd;
-  }
-  
-  .Menu {
-    position: absolute;
-    display: none;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 95vh;
-    flex-flow: column wrap;
-    justify-content: center;
-    align-items: center;
-    z-index: 50;
-    background: white;
-    transition: all 250ms ease-out;
-    transform: translateX(0);
-    overflow-y: auto;
-  }
-
-  .CloseButton {
-    padding-left: 20px;
-    padding-top: 30px;
-  }
-  
-  .CloseButton-Icon {
-    color: black;
-    font-size: 4rem;
-    cursor: pointer;
-  }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
 }
 
- /* フォーム================================ */
- .form {
-    max-width: 600px;
-    margin: 0 auto;
-    background-color: white;
-    box-shadow: 0 2px 6px #c1ced7;
-  }
-  
-  .form-heading {
-    font-weight: 300;
-    margin: 60px 0 20px;
-    font-size: 48px;
-    color: #bcc8d4;
-  }
-  
-  .form-body {
-    padding: 30px;
-  }
-  
-  .form-error {
-    color: #ff4d75;
-  }
-  
-  .form input {
-    width: 100%;
-    border: 1px solid #d8dadf;
-    padding: 10px;
-    color: #57575f;
-    font-size: 16px;
-    letter-spacing: 2px;
-    border-radius: 2px;
-  }
-  
-  .form textarea {
-    width: 100%;
-    min-height: 110px;
-    font-size: 16px;
-    letter-spacing: 2px;
-  }
-  
-  .form input[type="submit"] {
-    background-color: #3ecdc6;
-    color: white;
-    cursor: pointer;
-    font-weight: 300;
-    width: 120px;
-    border-radius: 2px;
-    margin-top: 8px;
-    margin-bottom: 0;
-    float: right;
-  }
-  
-  .form-body:after {
-    content: '';
-    display: table;
-    clear: both;
-  }
+.logo {
+  padding-left: 25px;
+}
 
-  /* フラッシュ ================================ */
-  .flash {
-    padding: 10px 0;
-    color: white;
-    background: rgb(251, 170, 88);
-    text-align: center;
-    position: absolute;
-    top: 64px;
-    z-index: 10;
-    width: 100%;
-    border-radius: 0 0 2px 2px;
-    font-size: 14px;
-  }
+.span-container,
+.checkbox {
+  width: 22px;
+  height: 22px;
+  position: absolute;
+  top: 45%;
+  transform: translateY(-20%);
+  color: #000;
+}
+
+.checkbox {
+  display: none;
+}
+
+.span-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
+  width: 22px;
+  height: 22px;
+  cursor: pointer;
+  left: 0;
+  margin-left: 20px;
+}
+
+.span-container span {
+  width: 100%;
+  height: 1.5px;
+  background: black;
+  transition: all 250ms ease-out;
+  transform-origin: 0 0;
+}
+
+.checkbox:checked ~ .Menu {
+  display: block;
+  left: 0;
+}
+
+.checkbox:checked ~ .span-container span:nth-last-child(1) {
+  transform: rotate(-225deg) translate(-1px, 0px);
+}
+
+.checkbox:checked ~ .span-container span:nth-last-child(2) {
+  transform: rotate(0deg) scale(0.2, 0.2);
+  opacity: 0;
+}
+
+.checkbox:checked ~ .span-container span:nth-last-child(3) {
+  transform: rotate(225deg) translate(0px, -1px);
+}
+
+.Menu-Group {
+  padding: 30px;
+  margin: 0;
+}
+
+.Menu-Group-Item {
+  margin-bottom: 0.3rem;
+}
+
+.Menu-Group-Item-Link {
+  text-decoration: none;
+  color: white;
+  font-size: clamp(1.4rem, 2.4vw, 2.2rem);
+}
+
+.Menu-Group-Item-Link:hover {
+  color: salmon;
+}
+
+.Menu-Group-Separator {
+  margin: 1rem 0;
+  border: none;
+  border-top: 1px solid #dddd;
+}
+
+.Menu {
+  position: absolute;
+  display: none;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 95vh;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  z-index: 50;
+  background: white;
+  transition: all 250ms ease-out;
+  transform: translateX(0);
+  overflow-y: auto;
+}
+
+.CloseButton {
+  padding-left: 20px;
+  padding-top: 30px;
+}
+
+.CloseButton-Icon {
+  color: black;
+  font-size: 4rem;
+  cursor: pointer;
+}
+}
+
+
+/* フォーム================================ */
+.form {
+  max-width: 600px;
+  margin: 0 auto;
+  background-color: white;
+  box-shadow: 0 2px 6px #c1ced7;
+}
+
+.form-heading {
+  font-weight: 300;
+  margin: 60px 0 20px;
+  font-size: 48px;
+  color: #bcc8d4;
+}
+
+.form-body {
+  padding: 30px;
+}
+
+.form-error {
+  color: #ff4d75;
+}
+
+.form input {
+  width: 100%;
+  border: 1px solid #d8dadf;
+  padding: 10px;
+  color: #57575f;
+  font-size: 16px;
+  letter-spacing: 2px;
+  border-radius: 2px;
+}
+
+.form textarea {
+  width: 100%;
+  min-height: 110px;
+  font-size: 13px;
+  letter-spacing: 2px;
+}
+
+.form input[type="submit"] {
+  background-color: #3ecdc6;
+  color: white;
+  cursor: pointer;
+  font-weight: 300;
+  width: 120px;
+  border-radius: 2px;
+  margin-top: 8px;
+  margin-bottom: 0;
+  float: right;
+}
+
+.form-body:after {
+  content: '';
+  display: table;
+  clear: both;
+}
+
+/* フラッシュ ================================ */
+.flash {
+  padding: 10px 0;
+  color: white;
+  background: rgb(251, 170, 88);
+  text-align: center;
+  position: absolute;
+  top: 64px;
+  z-index: 10;
+  width: 100%;
+  border-radius: 0 0 2px 2px;
+  font-size: 14px;
+}
