--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -194,11 +194,11 @@ margin-right: 10px;
 
 /* パソコンの画面幅 */
 @media screen and (min-width: 768px) {
-.checkbox {
+.menu-container {
   display: none;
 }
 
-.Menu {
+.navbar-collapse {
   position: absolute;
   margin-top: 87px;
   left: 10px;
@@ -214,11 +214,11 @@ margin-right: 10px;
   position: relative;
 }
 
-.Menu-CloseBtn {
+.bavbar-container {
   display: none;
 }
 
-.Menu-Group {
+.navbar-nav {
   display: block;
 }
 
@@ -226,138 +226,64 @@ margin-right: 10px;
   display: block;
 }
 
-.Menu-HamburgerBtn {
-  display: none;
-}
-
-.CloseButton {
-  display: none;
-}
-
-.CloseButton-Icon {
+.navbar-toggle {
   display: none;
 }
 }
 
 /* スマートフォンの画面幅 */
-@media screen and (max-width: 767px) {
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
-}
-
+@media screen and (max-width: 768px) {
 .logo {
   padding-left: 25px;
 }
 
-.span-container,
-.checkbox {
-  width: 22px;
-  height: 22px;
-  position: absolute;
-  top: 45%;
-  transform: translateY(-20%);
-  color: #000;
-}
-
-.checkbox {
-  display: none;
-}
-
-.span-container {
-  display: flex;
+.navbar {
   flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-end;
-  width: 22px;
-  height: 22px;
-  cursor: pointer;
-  left: 0;
-  margin-left: 20px;
+  margin-bottom: 0;
+  background-color: #fff;
+  transition: all 0.2s ease-out;
 }
 
-.span-container span {
-  width: 100%;
-  height: 1.5px;
-  background: black;
-  transition: all 250ms ease-out;
-  transform-origin: 0 0;
-}
-
-.checkbox:checked ~ .Menu {
-  display: block;
-  left: 0;
-}
-
-.checkbox:checked ~ .span-container span:nth-last-child(1) {
-  transform: rotate(-225deg) translate(-1px, 0px);
-}
-
-.checkbox:checked ~ .span-container span:nth-last-child(2) {
-  transform: rotate(0deg) scale(0.2, 0.2);
-  opacity: 0;
-}
-
-.checkbox:checked ~ .span-container span:nth-last-child(3) {
-  transform: rotate(225deg) translate(0px, -1px);
-}
-
-.Menu-Group {
-  padding: 30px;
-  margin: 0;
-}
-
-.Menu-Group-Item {
-  margin-bottom: 0.3rem;
-}
-
-.Menu-Group-Item-Link {
-  text-decoration: none;
-  color: white;
-  font-size: clamp(1.4rem, 2.4vw, 2.2rem);
-}
-
-.Menu-Group-Item-Link:hover {
-  color: salmon;
-}
-
-.Menu-Group-Separator {
-  margin: 1rem 0;
-  border: none;
-  border-top: 1px solid #dddd;
-}
-
-.Menu {
+.menu-container {
   position: absolute;
-  display: none;
+}
+
+.navbar-toggle {
+  top: 70px;
+}
+
+.navbar .navbar-nav li a {
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #2E1C05;
+  transition: all 0.2s ease-out;
+}
+
+.navbar-brand {
+  font-size: 25px;
+  transition: all 0.2s ease-out;
+}
+
+.navbar-nav>li>a::after {
+  position: absolute;
+  top: 80%;
   left: 0;
-  top: 0;
   width: 100%;
-  height: 95vh;
-  flex-flow: column wrap;
-  justify-content: center;
-  align-items: center;
-  z-index: 50;
-  background: white;
-  transition: all 250ms ease-out;
-  transform: translateX(0);
-  overflow-y: auto;
+  height: 1px;
+  background: #2E1C05;
+  content: '';
+  opacity: 0;
+  transition: height 0.3s, opacity 0.3s, transform 0.3s;
+  transform: translateY(-10px);
 }
 
-.CloseButton {
-  padding-left: 20px;
-  padding-top: 30px;
-}
-
-.CloseButton-Icon {
-  color: black;
-  font-size: 4rem;
-  cursor: pointer;
+.navbar-nav>li>a:hover::after,
+.navbar-nav>li>a:focus::after {
+  height: 2px;
+  opacity: 1;
+  transform: translateY(0px);
 }
 }
-
 
 /* フォーム================================ */
 .form {
