--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,23 +13,13 @@
 
   <body>
     <div class="wrapper">
-
       <header>
-        <input type="checkbox" class="checkbox" id="menu">
-        <label for="menu" class="span-container">
-          <span></span>
-          <span></span>
-          <span></span>
-        </label>
-
         <div class="header-logo">
           <div class="logo">
-            <%= link_to("Wiblu", "https://wiblu-blog.net") %>
+            <a href="#">Wiblu</a>
           </div>
         </div>
-
         <% if @current_user %>
-
           <ul class="header-menus"> 
             <li>
               <div class="search" id="search-container">
@@ -47,9 +37,47 @@
               <% end %>
             </li>
           </ul>
-          
-        <% else %>
 
+          <nav id="main-navbar" class="navbar navbar-default navbar-fixed-top">
+            <div class="menu-container">
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                  <span class="sr-only">Wiblu navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+              </div>
+
+              <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                  <li><a href="#">V 投稿一覧</a></li>
+                  <li><a href="/posts/index">歌詞</a></li>
+                  <li><a href="/musics">音楽</a></li>
+                  <li><a href="/images">イラスト</a></li>
+                  <li><a href="/movies">映像</a></li>
+                  <li><a href="/videos">ミュージックビデオ</a></li>
+                  <hr class="Menu-Group-Separator">
+                  <li><a href="#">V 新規投稿</a></li>
+                  <li><a href="/posts/new">歌詞</a></li>
+                  <li><a href="/musics/new">音楽</a></li>
+                  <li><a href="/images/new">イラスト</a></li>
+                  <li><a href="/movies/new">映像</a></li>
+                  <li><a href="/videos/new">ミュージックビデオ</a></li>
+                  <hr class="Menu-Group-Separator">
+                  <li><a href="/rooms/index">メッセージ</a></li>
+                  <li><a href="/applies/#{@current_user.id}/index">ダウンロード承認</a></li>
+                  <li><a href="/users/index">ユーザー一覧</a></li>
+                  <li><a href="/logout", {method: "post"}>ログアウト</a></li>
+                  <hr class="Menu-Group-Separator">
+                  <li><a href="/contacts">お問い合わせ</a></li>
+                  <li><a href="/riyoukiyaku">利用規約</a></li>
+                  <li><a href="/puraibasiporisi">プライバシーポリシー</a></li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+        <% else %>
           <ul class="header-menus">
             <li>
               <%= link_to("Wibluとは", "https://wiblu-blog.net/wiblu-toha") %>
@@ -71,82 +99,6 @@
           <%= ERB::Util.html_escape(flash[:notice]) %>
         </div>
       <% end %>
-      
-      <div class="Menu-nav">
-      <nav class="Menu">
-
-        <div class="CloseButton">
-          <label for="menu" class="CloseButton-Icon">×</label>
-        </div>
-
-        <ul class="Menu-Group">
-          <li class="Menu-Group-Item">
-            <a class="Menu-Group-Item-Link" href="#">V 投稿一覧</a>
-          </li>
-          <li class="Menu-Group-Item">
-            <a class="Menu-Group-Item-Link" href="/posts/index">歌詞</a>
-          </li>
-          <li class="Menu-Group-Item">
-            <a class="Menu-Group-Item-Link" href="/musics">音楽</a>
-          </li>
-          <li class="Menu-Group-Item">
-            <a class="Menu-Group-Item-Link" href="/images">イラスト</a>
-          </li>
-          <li class="Menu-Group-Item">
-            <a class="Menu-Group-Item-Link" href="/movies">映像</a>
-          </li>
-          <li class="Menu-Group-Item">
-            <a class="Menu-Group-Item-Link" href="/videos">ミュージックビデオ</a>
-          </li>
-          <hr class="Menu-Group-Separator">
-          <li class="Menu-Group-Item">
-            <a class="Menu-Group-Item-Link" href="#">V 新規投稿</a>
-          </li>
-          <li class="Menu-Group-Item">
-            <a class="Menu-Group-Item-Link" href="/posts/new">歌詞</a>
-          </li>
-          <li class="Menu-Group-Item">
-            <a class="Menu-Group-Item-Link" href="/musics/new">音楽</a>
-          </li>
-          <li class="Menu-Group-Item">
-            <a class="Menu-Group-Item-Link" href="/images/new">イラスト</a>
-          </li>
-          <li class="Menu-Group-Item">
-            <a class="Menu-Group-Item-Link" href="/movies/new">映像</a>
-          </li>
-          <li class="Menu-Group-Item">
-          <a class="Menu-Group-Item-Link" href="/videos/new">ミュージックビデオ</a>
-          </li>
-          <hr class="Menu-Group-Separator">
-          <li class="Menu-Group-Item">
-            <a class="Menu-Group-Item-Link" href="/rooms/index">メッセージ</a>
-          </li>
-          <li class="Menu-Group-Item">
-          <a class="Menu-Group-Item-Link" href="/applies/#{@current_user.id}/index">
-            ダウンロード承認
-          </a>
-          </li>
-          <li class="Menu-Group-Item">
-            <a class="Menu-Group-Item-Link" href="/users/index">ユーザー一覧</a>
-          </li>
-          <li class="Menu-Group-Item">
-            <a class="Menu-Group-Item-Link" href="/logout", {method: "post"}>
-              ログアウト
-            </a>
-          </li>
-          <hr class="Menu-Group-Separator">
-          <li class="Menu-Group-Item">
-            <a class="Menu-Group-Item-Link" href="/contacts">お問い合わせ</a>
-          </li>
-          <li class="Menu-Group-Item">
-            <a class="Menu-Group-Item-Link" href="/riyoukiyaku">利用規約</a>
-          </li>
-          <li class="Menu-Group-Item">
-            <a class="Menu-Group-Item-Link" href="/puraibasiporisi">プライバシーポリシー</a>
-          </li>
-        </ul>
-      </nav>
-      </div>
 
       <div class="body-wrapper">
         <%= yield %>
