--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -1,23 +1,32 @@
 <div class="main users-new">
   <div class="container">
-    <div class="form-heading">ログイン</div>
+    <h1 class="form-heading">新規ユーザー登録</h1>
     <div class="form users-form">
       <div class="form-body">
-      <% if @error_message %>
-      <div class="form-error">
-        <%= @error_message %>
-      </div>
-    <% end %>
-    
-      <%= form_tag("/login") do %>
-        <p>メールアドレス</p>
-        <input name="email" value="<%= @email %>">
-        <p>パスワード</p>
-        <input type="password" name="password" value="<%= @password %>">
-        <%= link_to ">>パスワードを忘れた方はこちら", new_password_reset_path %>
-　　　　<div class="form-group">
-        　<input type="submit" value="ログイン">
-　　　　</div>
+        <% if @user.errors.any? %>
+          <% @user.errors.full_messages.each do |message| %>
+            <div class="form-error">
+              <%= message %>
+            </div>
+          <% end %>
+        <% end %>
+
+        <%= form_for @user, url: "/users/create" do |f| %>
+          <p>ユーザー名</p>
+          <%= f.text_field :name, class: "form-control", value: @user&.name %>        
+          <p>メールアドレス</p>
+          <%= f.text_field :email, class: "form-control", value: @user&.email %>
+         
+          <p>パスワード</p>
+          <%= f.password_field :password, class: "form-control", value: @user&.password %>
+          
+          <%= f.label :agreement, :class => "form-check-label" do %>
+            <%= f.check_box :agreement, class: "form-check-input" %>
+            <%= link_to("利用規約", "/riyoukiyaku") %>と<%= link_to("プライバシーポリシー", "/puraibasiporisi") %>に同意する
+          <% end %>
+          <div class="form-group">
+            <%= f.submit "新規登録", class: "btn btn-large btn-primary" %>
+          </div>
         <% end %>
       </div>
     </div>
